[gd_scene load_steps=2 format=3 uid="uid://b8sqw4ayd2bre"]

[ext_resource type="Script" path="res://ui/left_button_panel.gd" id="1_0vlbx"]

[node name="LeftButtonPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vlbx")

[node name="Spacer1" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Button1" type="Button" parent="."]
layout_mode = 2
text = "Button 1"

[node name="Spacer2" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="."]
layout_mode = 2
text = "Button 2"

[node name="Spacer3" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="."]
layout_mode = 2
text = "Button 3"

[node name="Spacer4" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Button4" type="Button" parent="."]
layout_mode = 2
text = "Button 4"

[node name="Spacer5" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
